--- a/iDress/Info.plist
+++ b/iDress/Info.plist
@@ -41,5 +41,13 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>This app will need access to your location to automatically find local weather.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app will need access to your location to automatically find local weather.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app wants to access your photo library.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app wants to access your camera.</string>
 </dict>
 </plist>
